[tool.poetry]
name = "cron-times"
version = "0.2.1"
description = "Show schdueled jobs in a more readable way"
authors = ["tzing <tzingshih@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "cron_times"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
pypugjs = "^5.9.12"
markdown2 = "^2.4.6"
croniter = "^1.3.8"
pyyaml = "^6.0"
click = {version = "^8.1.3", optional = true}

[tool.poetry.extras]
cli = ["click"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
