[tool.poetry]
name = "cron-times"
version = "0.9.0-dev"
description = "Timetable for your cronjobs"
authors = ["Tzu-Ting <tzingshih@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
croniter = "^2.0.1"
flask = "^3.0.0"
humanize = "^4.9.0"
mistune = "^3.0.2"
pydantic = "^2.5.1"
rapidfuzz = "^3.5.2"
tomlkit = "^0.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "C90", # mccabe
    "I",   # isort
    "PT",  # flake8-pytest-style
    "RUF", # ruff checks
    "TCH", # flake8-type-checking
    "UP",  # pyupgrade
]
